# Adaptive_Bitrate_Algorithm

./: CMakeLists.txt  README.md  Skype_Papers.txt  adaptive_udp_sender.h  main.cpp  receiver.cpp  udp_port_profiler.h
